<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BBDEFB"
    android:padding="16dp"
    tools:context="com.example.android.musicalstructure.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/description"
            android:layout_marginBottom="50dp"
            android:layout_weight="1"
            android:text="@string/playerDescription" />

        <TextView
            style="@style/playlistItem"
            android:gravity="center_vertical"
            android:text="@string/song1" />

        <TextView
            style="@style/playlistItem"
            android:gravity="center_vertical"
            android:text="@string/song2" />

        <TextView
            style="@style/playlistItem"
            android:gravity="center_vertical"
            android:text="@string/song3" />

        <TextView
            style="@style/playlistItem"
            android:gravity="center_vertical"
            android:text="@string/song4" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">


            <Button
                android:id="@+id/PlayList_Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:text="@string/playList" />

            <Button
                android:id="@+id/Setting_Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_toRightOf="@id/PlayList_Button"
                android:text="@string/Settings" />

        </RelativeLayout>

        <Button
            android:id="@+id/Payemnt_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="130dp"
            android:text="@string/BuyNow" />

    </LinearLayout>


</ScrollView>