<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0D47A1"
    android:padding="16dp"
    tools:context="com.example.android.musicalstructure.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/description"
            android:layout_marginBottom="50dp"
            android:layout_weight="1"
            android:text="@string/settingsDescription" />

        <TextView
            style="@style/playlistItem"
            android:gravity="center_vertical"
            android:text="@string/Rating" />

        <TextView
            style="@style/playlistItem"
            android:gravity="center_vertical"
            android:text="@string/support" />

        <TextView
            style="@style/playlistItem"
            android:gravity="center_vertical"
            android:text="@string/Friend" />

        <TextView
            style="@style/playlistItem"
            android:gravity="center_vertical"
            android:text="@string/Remove" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">


            <Button
                android:id="@+id/PlayList_Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:text="@string/playList" />

            <Button
                android:id="@+id/Player_Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_toRightOf="@id/PlayList_Button"
                android:text="@string/Player" />


        </RelativeLayout>


    </LinearLayout>


</ScrollView>